<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:paddingTop="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/proje_tanitim_baslik"
                    android:layout_gravity="center"
                    android:text="@string/projectIntroductionTitle"/>
               <!--  
                12.07.2014 tarihinde gokman tarafindan gereksiz gorulup kaldirildi
                <ImageView android:src="@drawable/logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"/>  -->
                <!-- Logo Ends -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical" >

            <!-- Email Label -->

            <EditText
                android:id="@+id/emailText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:hint="@string/email"
                android:layout_marginTop="5dip"
                android:singleLine="true" />
            <!-- Password Label -->

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/password"
                android:password="true"
                android:singleLine="true" />
            <!-- Login button -->

            <LinearLayout
                android:id="@+id/checkboxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rememberMe"
                    android:textColor="@color/ownGray" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/newAccountBlue"
                    android:textSize="16dip"
                    android:layout_marginLeft="30dip"
                    android:text="@string/forgotPassword" />
                
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/giris_button"
                android:layout_marginTop="10dip"
                android:height="40dip"
                android:text="@string/login" />

            <!-- Link to Registration Screen -->

            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="@string/wannaToCreateAccount"
                android:textColor="@color/newAccountBlue"
                android:textSize="15sp" />
            
               <com.facebook.widget.LoginButton
		        android:id="@+id/facebookLoginButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		         />
               <!-- facebook:fetch_user_info="true"
               facebook:confirm_logout="false"-->
        </LinearLayout>
  </RelativeLayout>

</ScrollView>