<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff" >
        
<!-- kitap adı ve fotosu bölümü 1 -->
        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dip"
            android:orientation="horizontal"
            android:weightSum="100" >
<!-- kitap adı bölümü  1.1 -->
            <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:orientation="vertical" >

                <!-- Book Name Label -->

                <TextView
                    android:id="@+id/bookNameText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookName"
                    android:textColor="@color/ownGray" />

                <EditText
                    android:id="@+id/book_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:singleLine="true" />

            </LinearLayout>
<!-- kitap fotosu bölümü 1.2 -->
            <ImageView
                android:id="@+id/newbookImg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="65" />
        </LinearLayout>

        <EditText
            android:id="@+id/writer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageLayout"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:text="@string/writerName"
            android:textSize="12dip" />
        <!-- Publisher Label -->

        <EditText
            android:id="@+id/sh_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/writer"
            android:layout_marginTop="5dip"
            android:lines="4"
            android:singleLine="false"
            android:text="@string/bookDescription"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/tags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sh_description"
            android:layout_marginTop="5dip"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/bookTags"
            android:textSize="12dip" />

        <Button
            android:id="@+id/btnAddBook"
            style="@style/add_button"
            android:layout_above="@+id/linearLayoutAltDugmeler"
            android:layout_below="@+id/tags"
            android:layout_marginTop="10dip"
            android:text="@string/btnBookAdd"/>

      <include layout="@layout/alt_dugmeler"/>
        
    </RelativeLayout>

</ScrollView>