<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#fff">
 
        <!--  Header  Starts-->
        <LinearLayout android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#e35507"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">

        </LinearLayout>

        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:layout_below="@id/header">
          <!-- Full Name Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/edit_profile_username"/>
          <EditText android:id="@+id/edit_profile_uname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"/>
          <!--  Email Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/edit_profile_about"/>
          <EditText android:id="@+id/edit_profile_about"
                android:layout_width="fill_parent"
                android:lines="3"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="5dip"/>
          <!-- Register Button -->
          
          <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <!-- Logo Start -->

                <ImageView
                    android:id="@+id/edit_profile_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                     />
                
<!-- Logo Ends -->
            </LinearLayout>
          <LinearLayout
                android:id="@+id/header2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >
          
          <Button
                    android:id="@+id/btnBrowse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/edit_profile_upload" />
          </LinearLayout>
		<Button android:id="@+id/btnUpdateProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/edit_profile_update"/>
          <!-- Link to Login Screen -->
 
        </LinearLayout>
        <!-- Registration Form Ends -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:weightSum="100" >

            <ImageView
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:src="@drawable/home_button" />

            <ImageView
                android:id="@+id/explore_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:src="@drawable/explore_button" />

            <ImageView
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:src="@drawable/add_button" />

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:src="@drawable/profile_button" />

            <ImageView
                android:id="@+id/timeline_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:src="@drawable/timeline_button" />
        </LinearLayout>        
  </RelativeLayout>
</ScrollView>